# NoTeX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  CompileConfig.h.in  LICENSE  README.md  format.sh
libs/: CMakeLists.txt
libs/pdf2svg/: CMakeLists.txt  Makefile.in  config.status  configure  pdf2svg.c  pdf2svg.h
src/: CMakeLists.txt  Editor.h  ModuleList.h  clickableimage.h  debug.h  editor.cpp  editor.h  editorapp.h  main.cpp  notexview.cpp  notexview.h  pdf2svg  pdf2svg.c  pdf2svg.h
src/Containers/: CMakeLists.txt  module.cpp  module.h
src/GUI/: CMakeLists.txt  clickableimage.h  editor.cpp  editor.h  editorapp.h  notexview.cpp  notexview.h
src/include/pdf2svg/: CMakeLists.txt  Makefile  pdf2svg  pdf2svg.c  pdf2svg.h
src/include/pdf2svg/.deps/: pdf2svg-pdf2svg.Po
src/include/pdf2svg/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
